# spreadsheet-analyzer

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
assets/: app.rc  app.rc.in  app_icon.afphoto  manifest.manifest
cmake/: compiler_warnings.cmake  version.cmake
cpm/: add_cxxopts.cmake  csv-parser.cmake  expected.cmake  fast_float.cmake  fmt.cmake  fontawesome.cmake  glew.cmake  imgui.cmake  implot.cmake  nativefiledialog-extended.cmake  roboto_mono.cmake  roboto_sans.cmake  sdl-image.cmake  sdl.cmake  spdlog.cmake  uuid.cmake
inc/: about_screen.hpp  csv_handling.hpp  custom_type_traits.hpp  dicts.hpp  file_dialog.hpp  fonts.hpp  global_state.hpp  imgui_extensions.hpp  math_helpers.hpp  plotting.hpp  raw_handling.hpp  string_helpers.hpp  utility.hpp  uuid_generator.hpp  version.hpp  winapi.hpp  window_context.hpp
src/: about_screen.cpp  csv_handling.cpp  file_dialog.cpp  fonts.cpp  imgui_extensions.cpp  main.cpp  plotting.cpp  raw_handling.cpp  string_helpers.cpp  textures.c  version.cpp  winapi.cpp  window_context.cpp  window_icon.c
